[project]
name = "durate-preflight"
version = "0.1.0"
description = "A compliance pre flight layer for Durate that converts plain English rules into typed constraints, statically proves every published schedul"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tarun Aditya Kusupati" }
]
dependencies = []

[project.scripts]
durate-preflight = "durate_preflight.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
